Feat: [권한 관리] 권한 정의 및 권한 수정하는 API 구현